# Pineapple

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.lua  build_and_run.sh  build_external.lua  compile_commands.json  imgui.ini  premake5.lua  run.sh
Core/: CMakeLists.txt
Core/src/: pineapple.h
Core/src/ImGui/: ImGuiDockSpaceLayer.h  ImGuiManager.cpp  ImGuiManager.h  ImGuiWindow.h
Core/src/ImGui/layers/: ImGuiDockSpace.cpp  ImGuiDockSpace.h
Core/src/ImGui/widgets/: Table.cpp  Table.h  Wiget.h
Core/src/backends/GLFW/: GLFW_Input.cpp  GLFW_Input.h  GLFW_Window.cpp  GLFW_Window.h
Core/src/backends/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Core/src/core/: Input.cpp  Input.h  Window.h  application.cpp  application.h  core.h  entrypoint.h  keycodes.h  layer.h  layer_manager.cpp  layer_manager.h  window.cpp  window.h
Core/src/dbc/: Connector.h  DBConnector.h  DBManager.cpp  DBManager.h  DBResult.cpp  DBResult.h  Error.cpp  Error.h  Manager.cpp  Manager.h  QueryData.cpp  QueryData.h  Schema.h
Core/src/dbc/drivers/: MariaDB.cpp  MariaDB.h
Core/src/platform/: GLFW_Input.cpp  GLFW_Input.h  GLFW_Window.cpp  GLFW_Window.h
Core/src/renderer/: Buffer.cpp  Buffer.h  Renderer.cpp  Renderer.h  RendererContext.h  ShaderProgram.cpp  ShaderProgram.h  VertexArray.cpp  VertexArray.h  renderer.cpp
Core/src/renderer/backends/: RendererBackend.h
Core/src/renderer/backends/opengl/: OpenGLBackend.cpp  OpenGLBackend.h
Pineapple/: pineapple.h  premake5.lua
Pineapple-App/: CMakeLists.txt  premake5.lua
Pineapple-App/src/: DatabaseConnector.cpp  DatabaseConnector.h  db_result.cpp  db_result.h  main.cpp
Pineapple-App/src/windows/: DBWindow.cpp  DBWindow.h
Pineapple-Core/: CMakeLists.txt  premake5.lua
Pineapple-Core/include/: ODBCManager.h  pap_application.h  pap_layer.h  pap_print.h  pineapple.h
Pineapple-Core/src/: ODBCManager.cpp  pap_application.cpp  pap_layer.cpp  pap_window.cpp  pineapple.h  pinepch.h
Pineapple-Core/src/ImGui/: DBLayer.h  DBTableView.h  DBWindow.h  ImGuiDockSpaceLayer.cpp  ImGuiDockSpaceLayer.h  ImGuiLayer.h  ImGuiManager.cpp  ImGuiManager.h  ImGuiWindow.h  db_tableview.h  dblayer.h  dbwindow.h
Pineapple-Core/src/ImGui/windows/: DBLayer.h  DBWindow.h  ImGuiDockSpaceLayer.cpp  ImGuiDockSpaceLayer.h
Pineapple-Core/src/core/: application.cpp  application.h  core.h  entrypoint.h  event.h  layer.h  layer_manager.cpp  layer_manager.h  odbc_manager.cpp  odbc_manager.h  print.h  window.cpp  window.h
Pineapple-Core/src/dbc/: DBConnector.h  DBManager.cpp  DBManager.h  DBResult.cpp  DBResult.h  db_manager.cpp  db_manager.h  db_result.cpp  dbconnector.h
Pineapple-Core/src/dbc/drivers/: MariaDBConnector.cpp  MariaDBConnector.h
Pineapple-Core/src/imGui/: ImGuiDockSpaceLayer.cpp  ImGuiDockSpaceLayer.h  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiManager.cpp  ImGuiManager.h  ImGuiWindow.cpp  ImGuiWindow.h
Pineapple-Core/src/imgui/: ImGuiLayer.cpp  ImGuiLayer.h
Pineapple-Core/src/renderer/: renderer.cpp  renderer.h
Pineapple/include/: pap_application.h  pap_entrypoint.h  pap_layer.h  pap_print.h  pineapple.h  pnap_application.h  pnap_layer.h
Pineapple/src/: pap_application.cpp  pap_layer.cpp  pinepch.h  pnap_application.cpp  pnap_layer.cpp  test.cpp  test.h
Sandbox/: CMakeLists.txt  premake5.lua
Sandbox/src/: Triangle.h  main.cpp  temp_shader_functions.h
Sandbox/src/shaders/: Fragment.glsl  Vertex.glsl
Sandbox/src/windows/: DBConnectionWindow.cpp  DBConnectionWindow.h  DBSchemaBrowserWindow.cpp  DBSchemaBrowserWindow.h  DBTableViewerWindow.cpp  DBTableViewerWindow.h  DBWindow.cpp  DBWindow.h
build_vendor/mariadb_build/: CPackConfig.cmake  CPackSourceConfig.cmake
build_vendor/mariadb_build/libmariadb/include/: mariadb_version.h
build_vendor/mariadb_build/libmariadb/libmariadb/: libmariadb.so.3
build_vendor/mariadb_build/libmariadb/mariadb_config/: libmariadb.pc  mariadb_config.c
build_vendor/nanodbc_build/: nanodbc-config.cmake
scripts/: build.py  clean.sh  export-compile-comands.sh  ninja-run.sh  ninja.sh  run.py  run.sh  tempCodeRunnerFile.sh
utility/: build_and_run.sh  build_pineapple.bat  build_pineapple.sh  build_vendor.bat  build_vendor.sh  imgui.ini
